@@ -17,6 +17,7 @@ Verilator 4.223 devel
 
 **Minor:**
 
+* Changed --no-merge-const-pool to -fno-merge-const-pool (#3436).
 * Support compile time trace signal selection with tracing_on/off (#3323). [Shunyao CAD]
 * Add assert when VerilatedContext is mis-deleted (#3121). [Rupert Swarbrick]
 * Define VM_TRACE_VCD when tracing in VCD format. [Geza Lore, Shunyao CAD]
